<resources>
    <string name="app_name">Tip Bot</string>
    <string name="str_button_tip">Tip</string>
    <string name="str_button_itemized_tip">Itemized Tip</string>
    <string name="str_button_calculator">Calculator</string>
    <string name="str_textview_how_can_i_help">How can I help you?</string>
    <string name="str_textview_what_is_bill_amount">Enter bill amount\u0020</string>
    <string name="str_edittext_bill_amount">0.00</string>
    <string name="str_textview_dollar_sign">$</string>
    <string name="str_textview_how_was_srvc">How was the service?</string>
    
    <string name="str_textview_bill">Original Bill</string>
    <string name="str_textview_split_bill">Bill</string>
    <string name="str_textview_1234567.90">$1234567.90</string>
    <string name="str_textview_123456.00">123456.00</string>
    <string name="str_textview_split_digit">1</string>
    <string name="str_textview_99_percent">99%</string>
    <string name="str_textview_split">Split</string>
    <string name="str_textview_tip_perecent">Tip %</string>
    <string name="str_textview_plus_sign">+</string>
    <string name="str_textview_minus_sign">-</string>
    <string name="str_textview_total_per_human">Each Person Pays</string>
    <string name="str_textview_total_you_pay">You Pay</string>
    <string name="str_textview_total">Total</string>
    <string name="str_textview_round_up">Round Tip Up</string>
    <string name="str_textview_round_down">Round Tip Down</string>
    <string name="str_textview_calculator">Calculator</string>
    <string name="str_textview_home">Home</string>
    <string name="str_textview_quit">Quit</string>
    <string name="str_textview_tip">Tip</string>
    <string name="str_textview_zero">0</string>

    <string name="str_button_calc_number_1">1</string>
    <string name="str_button_calc_number_2">2</string>
    <string name="str_button_calc_number_3">3</string>
    <string name="str_button_calc_number_4">4</string>
    <string name="str_button_calc_number_5">5</string>
    <string name="str_button_calc_number_6">6</string>
    <string name="str_button_calc_number_7">7</string>
    <string name="str_button_calc_number_8">8</string>
    <string name="str_button_calc_number_9">9</string>
    <string name="str_button_calc_number_0">0</string>
    <string name="str_button_calc_number_x">DEL</string>
    <string name="str_button_calc_number_clr">CLEAR</string>
    <string name="str_button_calc_number_plus">"\u002B"</string>
    <string name="str_button_calc_number_minus">"\u2212"</string>
    <string name="str_button_calc_number_times">"\u00D7"</string>
    <string name="str_button_calc_number_divide">"\u00F7"</string>
    <string name="str_button_calc_number_equals">"\u003D"</string>
    <string name="str_button_calc_decimal">.</string>
    <string name="str_button_calc_number_MoneySign">TIP</string>
    <string name="str_edittext_custom_toast">Custom Toast</string>
    <string name="str_button_great">Great</string>
    <string name="str_button_good">Good</string>
    <string name="str_button_bad">123456</string>
    <string name="str_button_back">Back</string>

</resources>
