<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/LinearLayout_Totals_Bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Bill"
            style="@style/Tip_Totals_Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_textview_bill" />

        <TextView
            android:id="@+id/textView_Bill_Digits"
            style="@style/Tip_Totals_Blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_textview_1234567.90"
            android:textAlignment="textEnd" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout_Totals_Split"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_Totals_Bill"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_Split"
            style="@style/Tip_Totals_Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_textview_split"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button_minus_SplitTip"
            style="@style/Tip_Totals_Button_Green"
            android:layout_gravity="center"
            android:text="@string/str_textview_minus_sign" />

        <TextView
            android:id="@+id/textView_Split_Digit"
            style="@style/Tip_Totals_Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="2"
            android:text="@string/str_textview_split_digit"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_plus_SplitTip"
            style="@style/Tip_Totals_Button_Green"
            android:layout_gravity="center"
            android:text="@string/str_textview_plus_sign" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Totals_TipPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_Totals_Split"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_TipPercent"
            style="@style/Tip_Totals_Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_textview_tip_perecent"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/button_minus_TipPercent"
            style="@style/Tip_Totals_Button_Green"
            android:layout_gravity="center"
            android:text="@string/str_textview_minus_sign" />

        <TextView
            android:id="@+id/textView_TipPecent_Digit"
            style="@style/Tip_Totals_Green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="2"
            android:text="@string/str_textview_99_percent"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_plus_TipPercent"
            style="@style/Tip_Totals_Button_Green"
            android:layout_gravity="center"
            android:text="@string/str_textview_plus_sign" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout__Totals_CONTAINER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout_Totals_TipPercent"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape_totals_background"

        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/LinearLayout_Totals_TotalPerHuman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout_Totals_TipPercent"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/Tip_Totals_Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str_textview_total_per_human"
                android:textAlignment="center"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_Totals_Tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout_Totals_TotalPerHuman"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Tip"
                style="@style/Tip_Totals_Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_textview_tip"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView_Tip_Digits"
                style="@style/Tip_Totals_Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_textview_1234567.90"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_Totals_SplitBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayout_Totals_Tip"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_SplitBill"
                style="@style/Tip_Totals_Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_textview_split_bill"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView_SplitBill_Digits"
                style="@style/Tip_Totals_Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_textview_1234567.90"
                android:textAlignment="textEnd"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_Totals_Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout_Totals_SplitBill"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Total"
                style="@style/Tip_Totals_Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_textview_total"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView_Total_Digits"
                style="@style/Tip_Totals_Blue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_textview_1234567.90"
                android:textAlignment="textEnd"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Totals_RoundUpDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout__Totals_CONTAINER"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Totals_roundUp"
            style="@style/Tip_Totals_Button_Green"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:text="@string/str_textview_round_up" />

        <Button
            android:id="@+id/button_Totals_roundDown"
            style="@style/Tip_Totals_Button_Green"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:text="@string/str_textview_round_down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Totals_Calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_Totals_RoundUpDown"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Totals_Calculator"
            style="@style/Buttons_MainScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:text="@string/str_textview_calculator"
            android:textAlignment="center"
            android:textSize="26sp" />

        <Button
            android:id="@+id/button_Totals_Home"
            style="@style/Buttons_MainScreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:text="@string/str_textview_home"
            android:textAlignment="center"
            android:textSize="26sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_Totals_Quit"
        style="@style/Buttons_calculator_Red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout_Totals_Calculator"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/str_textview_quit"
        android:textAlignment="center"
        android:textSize="26sp" />


</RelativeLayout>